// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block with no props renders an unstyled div 1`] = `
<DocumentFragment>
  <div
    class="css-151qm6o"
  />
</DocumentFragment>
`;

exports[`Block with props renders as span 1`] = `
<DocumentFragment>
  <span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with props renders with spaceInline020 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-right: 8px;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with props renders with spaceStack010 for xs, spaceStack020 for sm, and spaceStack030 for md breakpoints 1`] = `
<DocumentFragment>
  @media screen and (max-width:479px) {
  .emotion-0 {
    margin-bottom: 4px;
  }
}

@media screen and (min-width:480px) and (max-width:767px) {
  .emotion-0 {
    margin-bottom: 8px;
  }
}

@media screen and (min-width:768px) {
  .emotion-0 {
    margin-bottom: 12px;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with props renders with spaceStack020 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #471e79;
  color: #ffffff;
  padding: 8px;
  margin-bottom: 8px;
}

.emotion-0 svg {
  fill: #ffffff;
  color: #ffffff;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
